--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "google-maps-react": "^1.1.2",
     "immutability-helper": "^2.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
