--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "google-maps-react": "^1.1.2",
     "immutability-helper": "^2.2.0",
     "react": "^16.0.0",
+    "react-anything-sortable": "^1.7.3",
     "react-dom": "^16.0.0",
+    "react-drag-list": "^1.0.4",
+    "react-drag-sortable": "^1.0.5",
     "react-redux": "^5.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.0",
+    "react-sortable-hoc": "^0.6.8",
+    "react-sortable-list": "^1.0.3",
     "redux": "^3.6.0",
     "redux-persist": "^4.7.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sortablejs": "^1.7.0"
   },
   "devDependencies": {
     "node-sass": "^4.5.2",
